--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/vendor/bootstrap-icons-1.9.1/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
