--- a/index.html
+++ b/index.html
@@ -614,7 +614,9 @@
                         data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active testimonial-box" data-bs-interval="4000">
-                                <img src="assets/images/clients/1 (1).jpg" class="img-fluid rounded-circle" alt="...">
+                                <div class="testimonial-img">
+                                    <img src="assets/images/clients/1 (1).jpg" class="img-fluid rounded-circle" alt="...">
+                                </div>                            
                                 <p> Lorem Ipsum has been the industry's standard dummy text ever since the when an
                                     unknown printer took a galley of type and scrambled it to make a type specimen book.
                                 </p>
@@ -622,7 +624,9 @@
                                 <span class="d-block">Envato Customer</span>
                             </div>
                             <div class="carousel-item testimonial-box" data-bs-interval="4000">
-                                <img src="assets/images/clients/1 (1).jpg" class="img-fluid rounded-circle" alt="...">
+                                <div class="testimonial-img">
+                                    <img src="assets/images/clients/1 (1).jpg" class="img-fluid rounded-circle" alt="...">
+                                </div> 
                                 <p> Lorem Ipsum has been the industry's standard dummy text ever since the when an
                                     unknown printer took a galley of type and scrambled it to make a type specimen book.
                                 </p>
@@ -630,7 +634,9 @@
                                 <span class="d-block">Envato Customer</span>
                             </div>
                             <div class="carousel-item testimonial-box" data-bs-interval="4000">
-                                <img src="assets/images/clients/1 (1).jpg" class="img-fluid rounded-circle" alt="...">
+                                <div class="testimonial-img">
+                                    <img src="assets/images/clients/1 (1).jpg" class="img-fluid rounded-circle" alt="...">
+                                </div> 
                                 <p> Lorem Ipsum has been the industry's standard dummy text ever since the when an
                                     unknown printer took a galley of type and scrambled it to make a type specimen book.
                                 </p>
@@ -705,20 +711,20 @@
                     </div>
                 </div>
                 <div class="owl-carousel owl-theme">
-                    
+
                     <div class="item col">
                         <div class="card h-100">
                             <div class="card-img">
                                 <img src="assets/images/blog/1.jpg" class="img-fluid card-img-top" alt="...">
                             </div>
                             <div class="card-body">
-                                <div class="card-text "style="min-height:150px">
+                                <div class="card-text " style="min-height:150px">
                                     <h6><a href="#">WordPress</a></h6>
                                     <h4><a href="#">Top WordPress Themes and Plugins for Hotels, Travel, and</a></h4>
                                     <span><a href="#">Read More</a></span>
                                 </div>
                             </div>
-                      </div>
+                        </div>
                     </div>
                     <div class="item col">
                         <div class="card h-100">
@@ -726,13 +732,13 @@
                                 <img src="assets/images/blog/2.jpg" class="img-fluid card-img-top" alt="...">
                             </div>
                             <div class="card-body">
-                                <div class="card-text "style="min-height:150px">
+                                <div class="card-text " style="min-height:150px">
                                     <h6><a href="#">Trends</a></h6>
                                     <h4><a href="#">Best Design Items to Appeal to the Millennial Generation</a></h4>
                                     <span><a href="#">Read More</a></span>
                                 </div>
                             </div>
-                      </div>
+                        </div>
                     </div>
                     <div class="item col">
                         <div class="card h-100">
@@ -740,13 +746,13 @@
                                 <img src="assets/images/blog/3.jpg" class="img-fluid card-img-top" alt="...">
                             </div>
                             <div class="card-body">
-                                <div class="card-text "style="min-height:150px">
+                                <div class="card-text " style="min-height:150px">
                                     <h6><a href="#">Themeforest</a></h6>
                                     <h4><a href="#">The 20 Best Lightroom Presets You Need to Know About</a></h4>
                                     <span><a href="#">Read More</a></span>
                                 </div>
                             </div>
-                      </div>
+                        </div>
                     </div>
                     <div class="item col">
                         <div class="card h-100">
@@ -754,15 +760,15 @@
                                 <img src="assets/images/blog/4.jpg" class="img-fluid card-img-top" alt="...">
                             </div>
                             <div class="card-body">
-                                <div class="card-text "style="min-height:150px">
+                                <div class="card-text " style="min-height:150px">
                                     <h6><a href="#">Tag</a></h6>
                                     <h4><a href="#">Master These Awesome New Skills in March 2018</a></h4>
                                     <span><a href="#">Read More</a></span>
                                 </div>
                             </div>
-                      </div>
+                        </div>
                     </div>
- 
+
 
                 </div>
             </div>
@@ -807,19 +813,22 @@
                         <form class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input required type="text" placeholder="Name" class="form-control" id="input requiredPassword4">
-                                </div>                               
+                                    <input required type="text" placeholder="Name" class="form-control"
+                                        id="input requiredPassword4">
+                                </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input required type="email" placeholder="Email" class="form-control" id="inputEmail4">
+                                    <input required type="email" placeholder="Email" class="form-control"
+                                        id="inputEmail4">
                                 </div>
-                             
-                            </div>                        
+
+                            </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Message" id="exampleFormControlTextarea1" rows="6"></textarea>
-                                </div>                            
+                                    <textarea class="form-control" placeholder="Message"
+                                        id="exampleFormControlTextarea1" rows="6"></textarea>
+                                </div>
                             </div>
                             <div class="col-12">
                                 <button type="submit" class="btn">Submit</button>
