--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/4.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/4.jpg" class="portfolio-brand"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -455,7 +455,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/6.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/6.jpg" class="portfolio-brand"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -484,7 +484,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/2.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/2.jpg" class="portfolio-design"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -506,7 +506,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/5.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/5.jpg" class="portfolio-design"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -535,7 +535,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/1.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/1.jpg" class="portfolio-tab"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -557,7 +557,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/3.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/3.jpg" class="portfolio-tab"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -579,7 +579,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/5.jpg" class="portfolio-all"
+                                                    <a href="assets/images/portfolio/5.jpg" class="portfolio-tab"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
