--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/1.jpg" class="portfolio-tab"
+                                                    <a href="assets/images/portfolio/1.jpg" class="portfolio-graphic"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -557,7 +557,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/3.jpg" class="portfolio-tab"
+                                                    <a href="assets/images/portfolio/3.jpg" class="portfolio-graphic"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
@@ -579,7 +579,7 @@
                                                     <a href="#">
                                                         <i class="fa-solid fa-link"></i>
                                                     </a>
-                                                    <a href="assets/images/portfolio/5.jpg" class="portfolio-tab"
+                                                    <a href="assets/images/portfolio/5.jpg" class="portfolio-graphic"
                                                         data-gallery="portfolioGallery">
                                                         <i class="fa-solid fa-magnifying-glass-plus"></i>
                                                     </a>
